# auto-ut-agent

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  BATCH_GENERATION_USAGE.md  BUGFIX_SUMMARY.md  COMPILATION_OPTIMIZATION.md  Dockerfile  ENHANCED_FAULT_TOLERANCE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  Makefile  PLAN.md  PLAN_FIX_INFINITE_LOOP.md  README.md  REFACTORING_SUMMARY.md  TDD_DEVELOPMENT_PLAN.md  TDD_FINAL_REPORT.md  TDD_PROGRESS.md  docker-compose.yml  how  pyproject.toml  requirements.txt  test_fix.py  test_refactor_complete.py
.github/workflows/: benchmark.yml  coverage.yml  lint.yml  release.yml  security.yml  test.yml
.pyutagent/: error_patterns.json
.pyutagent/checkpoints/: checkpoint_0a2b4276.json  checkpoint_1fdc1ebb.json  checkpoint_25664b3d.json  checkpoint_2ce621c0.json  checkpoint_3397d6e3.json  checkpoint_3414a6be.json  checkpoint_4397b3bc.json  checkpoint_455aee3e.json  checkpoint_54b90086.json  checkpoint_5550d62e.json  checkpoint_55f13c0e.json  checkpoint_598b1c53.json  checkpoint_5ae0498d.json  checkpoint_5dd73e12.json  checkpoint_620dcf2d.json  checkpoint_705c5203.json  checkpoint_79e93074.json  checkpoint_90c138be.json  checkpoint_924f3e51.json  checkpoint_93faa5fa.json  checkpoint_996aa15c.json  checkpoint_a2ef2689.json  checkpoint_a8a0a4a7.json  checkpoint_b057e4c4.json  checkpoint_b31d34cf.json  checkpoint_bd7e6c58.json  checkpoint_c8d0dd90.json  checkpoint_cf79f58d.json  checkpoint_dcfd6bf5.json  checkpoint_e79ad058.json  checkpoint_ebd0cc3d.json  checkpoint_f1992103.json  checkpoint_fafaf58d.json  checkpoint_feb20a5a.json  checkpoint_ff6f0273.json  checkpoint_ffc51cf5.json
.trae/: plan.md
.trae/documents/: Aider新功能UI集成方案.md  Auto-UT-Agent 改进计划.md  Java-UT领域-持续改进计划.md  LLM优化效果评估与进一步优化计划.md  P0级功能开发计划 - 上下文管理与代码质量评估.md  P1-7, P1-6 和 P2 开发计划.md  P1级功能开发计划 - 构建工具扩展与静态分析.md  P3 高级能力开发计划.md  PyUT Agent CLI 实现方案.md  PyUT Agent 代码质量优化计划.md  PyUT Agent 全面改进计划.md  PyUT Agent 持续优化和改进计划.md  PyUT Agent 持续优化计划.md  PyUT Agent 深度优化计划.md  Python UT Agent 架构规划.md  UT-Agent-智能化增强方案.md  UT-Agent-智能化增强研究报告.md  UT-Agent-智能化增强第二阶段计划.md  UT-Agent持续优化改进和集成测试计划.md  UT-Agent持续优化改进和集成计划.md  UT-Agent智能化增强研究计划.md  app_v2_gui_integration_plan.md  architecture_integration_optimization_plan.md  batch_generation_optimization_plan.md  batch_generator_logging_plan.md  checklist.md  checklist_功能整合.md  ci_optimization_plan.md  claude_code_inspired_improvement_plan.md  cli_gui_sync_plan.md  coding_agent_evolution_plan.md  complete_migration_and_integration_plan.md  continuous_integration_optimization_plan.md  continuous_optimization_plan.md  continuous_refactoring_plan.md  core_gap_analysis.md  dead_code_analysis_plan.md  deduplication_and_optimization_plan.md  development_plan_2026_q1.md  e2e测试增强计划.md  (+85 more)
.trae/plan/: gap_analysis_plan.md  gap_analysis_top_coding_agents.md  jdk_config_plan.md
.trae/plans/: app_v2_gui_gap_analysis_plan.md  incremental_mode_optimization.md  incremental_mode_plan.md  incremental_mode_ui_support.md
docs/: architecture.md  cli_usage.md  code_review_report.md  coding-agent-gap-analysis.md  conf.py  developer_guide.md  gui_batch_generation_guide.md  gui_enhancements_guide.md  import_guidelines.md  index.rst  migration_guide.md  monaco-editor-study-notes.md  month2_validation_report.md  multi_agent_system_guide.md  unified_interfaces.md  vscode-extension-study-notes.md
docs/analysis/: coding_agent_gap_analysis.md
docs/best_practices/: architecture.rst
docs/core/: modules.rst
docs/examples/: basic_usage.rst
examples/: basic_usage.py  claude_code_agent_demo.py  claude_code_inspired_demo.py  context_management_demo.py  long_term_planning_demo.py  mcp_demo.py  multi_file_editor_demo.py  project_config_demo.py  specialized_subagents_demo.py  universal_planner_demo.py
pyutagent/: __init__.py  __main__.py  app_v2.py  config.py  main.py
pyutagent-intellij/: README.md  build.gradle.kts
pyutagent-vscode/: CHANGELOG.md  FINAL_REPORT.md  LICENSE  PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V0.2.md  V0.2.0_DEVELOPMENT_PLAN.md  WEEK1_STUDY_PLAN.md  WEEK2_DEVELOPMENT.md  WEEK3_4_DEVELOPMENT.md  WEEK4_SUMMARY.md  package.json  publish.ps1  publish.sh  tsconfig.json  webpack.config.js
pyutagent-vscode/docs/: BATCH_AND_PERFORMANCE.md  COVERAGE_ANALYSIS_GUIDE.md  JACOCO_INTEGRATION.md  QUICK_REFERENCE.md  TESTNG_SPEC.md  USAGE_GUIDE_V0.2.md  WEEK1_SUMMARY.md  WEEK2_IMPLEMENTATION.md
pyutagent-vscode/resources/: README.md
pyutagent-vscode/src/: extension.ts
pyutagent-vscode/test/: integration.test.ts
pyutagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyutagent/agent/: __init__.py  acp_client.py  actions.py  agent_factory.py  agent_skills.py  autonomous_loop.py  autonomous_planner.py  base_agent.py  batch_executor.py  batch_test_generator.py  builtin_skills.py  capability_registry.py  claude_code_agent.py  code_reviewer.py  collaboration.py  conflict_resolver.py  context_compression.py  context_manager.py  conversation.py  delegating_autonomous_loop.py  delegating_subagent.py  delegation_mixin.py  enhanced_agent.py  enhanced_autonomous_loop.py  enhanced_planner.py  enhanced_skills.py  enhanced_tool_orchestrator.py  error_recovery.py  generation_evaluator.py  hierarchical_planner.py  hooks.py  incremental_fixer.py  incremental_manager.py  integration_manager.py  intelligence_enhancer.py  intelligent_selector.py  llm_coverage_evaluator.py  llm_driven_autonomous_loop.py  multi_language_generator.py  parallel_executor.py  (+43 more)
pyutagent/cache/: __init__.py  test_cache.py
pyutagent/cli/: __init__.py  main.py  (+3 more)
scripts/: check_migration.py  optimize_imports.py
tests/: __init__.py  base.py  conftest.py  test_e2e.py
vscode-extension/: package.json  tsconfig.json
(+589 files in other folders)
