[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutagent"
version = "0.1.0"
description = "AI-powered Java Unit Test Generator with Agent capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PyUT Agent Team"}
]
keywords = ["testing", "java", "unit-test", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.8.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.52.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.2.0",
    "SQLAlchemy>=2.0.36",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.2",
    "numpy>=1.26.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.40",
    "pathspec>=0.12.1",
    "tenacity>=8.2.0",
    "backoff>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.0",
    "pytest-metadata>=3.1.0",
    "allure-pytest>=2.13.0",
]

[project.scripts]
pyutagent = "pyutagent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyutagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
