[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutagent"
version = "0.1.0"
description = "AI-powered Java Unit Test Generator with Agent capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PyUT Agent Team"}
]
keywords = ["testing", "java", "unit-test", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.8.0",
    "qasync>=0.27.1",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.52.0",
    "sqlite-vec>=0.1.0",
    "torch>=2.8.0,<2.9.0",
    "sentence-transformers>=3.2.0",
    "SQLAlchemy>=2.0.36",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.2",
    "numpy>=1.26.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.40",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.0",
    "pytest-metadata>=3.1.0",
    "pytest-xdist>=3.6.0",
    "allure-pytest>=2.13.0",
    # Code quality tools
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pyutagent = "pyutagent.main:main"
pyutagent-cli = "pyutagent.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyutagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (>5s)",
    "flaky: Flaky tests",
    "gui: GUI tests",
]

# Code quality tools configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["pyutagent"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "pyutagent/ui/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 60
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
